# measurexp

./: .gitignore  404.html  EMG.md  LICENSE  README.md  about-participants.md  index.html  muscle_synergy.md  nmf.py  package-lock.json  pyproject.toml  setup.cfg  sitemap.xml
.github/workflows/: doc.yml  flake8.yml  python-package-conda.yml
EMG/: NMF.py  NMF_analysis.py  plot.py  preps.py
analysis/: plot.py
assets/js/: 07e8be9a.05d82967.js  0e384e19.f13fb08c.js  17896441.ce421236.js  194c94c3.52472e36.js  1be78505.367a3ef4.js  1f391b9e.bc137c24.js  393be207.10fd417a.js  935f2afb.f8d6f79c.js  c4f5d8e4.12c0f03e.js  common.a5087135.js  main.e541b1ce.js  runtime~main.723c5a8f.js
docs/: docusaurus.config.js  package-lock.json  package.json
docs/docs/: convert-pretty-csv.md  intro.md
docs/intro/: index.html
docs/src/components/HomepageFeatures/: index.js
docs/static/: CNAME
markdown-page/: index.html
measurexp/: EMG.py  ForcePlate.py  NMF.py  muscle_synergy.ipynb  muscle_synergy.py  non-parallel-emg.py  pre_anarysis.py  pretty-csv.py
measurexp/NTF/: analysis.py
tests/: stft.py  win-stft.py
