[tool.poetry]
name = "measurexp"
version = "0.1.0"
description = ""
authors = ["MURATA Mitsuharu <hikari.photon+dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.4.1"
scipy = "^1.8.0"
matplotlib = "^3.5.1"
tensorly = "^0.7.0"
sklearn = "^0.0"
torch = "^1.11.0"
loguru = "^0.6.0"
SQLAlchemy = "^1.4.36"
notebook = "^6.4.11"
ipykernel = "^6.13.0"
dask = "^2022.5.0"
distributed = "^2022.5.0"
cupy-cuda116 = "^10.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
ipykernel = "^6.9.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
