[tool.poetry]
name = "measurexp"
version = "0.1.0"
description = ""
authors = ["MURATA Mitsuharu <hikari.photon+dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
tensorly = "^0.7.0"
sklearn = "^0.0"
notebook = "^6.4.11"
ipykernel = "^6.13.0"
statsmodels = "^0.13.2"
torch = {path = "torch-1.12.0+cu102-cp39-cp39-linux_x86_64.whl"}
cupy-cuda116 = "^10.5.0"
graphviz = "^0.20"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
ipykernel = "^6.9.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
