[metadata]
name = measurexp
version = 0.0.1
author = MURATA Mitsuharu
author_email = hikari.photon+dev@gmail.com
description = Libraries of measurement experiments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bcl-group/measurexp
project_urls =
    Bug Tracker = https://github.com/bcl-group/measurexp/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    matplotlib
    pandas
    scipy
    librosa
    hampel
packages = find:
python_requires = >=3.6

[options.packages.find]
